[package]
name = "jord"
version = "0.1.0"
edition = "2021"
authors = ["Cedric Liegeois <omam.github@gmail.com>",
          ]
repository = "https://github.com/ofmooseandmen/jord-rs"
documentation = "https://docs.rs/jord"
keywords = ["geo", "geography", "geodesy", "geodetics", "wgs84", "n-vector"]
description = "Geographical Position Calculations (Ellipsoidal and Spherical models)"
license = "MIT"
readme = "README.md"

[dependencies]

[dev-dependencies]
