[package]
name = "jord"
version = "0.15.0"
edition = "2021"
rust-version = "1.65"
authors = ["Cedric Liegeois <omam.github@gmail.com>"]
repository = "https://github.com/ofmooseandmen/jord-rs"
documentation = "https://docs.rs/jord"
keywords = ["geo", "geography", "geospatial", "n-vector"]
description = "Geographical Position Calculations (Ellipsoidal and Spherical models)"
license = "MIT"
readme = "README.md"
categories = ["science::geo"]

[features]
serde = ["dep:serde"]
uom = ["dep:uom"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
uom = { version = "0.36", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "minor_arc"
harness = false

[[bench]]
name = "positions"
harness = false

[[bench]]
name = "rectangle"
harness = false

[[bench]]
name = "sphere"
harness = false

[[bench]]
name = "sloop"
harness = false

[[bench]]
name = "vec3"
harness = false
